<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DropBook</string>
    <string name="acceder">Accede a DropBox</string>
    <string name="showList">Ver lista de libros</string>
    <string name="getting_books">Descargando libros</string>
    <string name="bookList">Lista de libros en Dropbox</string>
    <string name="emptyList">No hay libros electrónicos en tu cuenta de Dropbox</string>
    <string name="orderTitle">Ordenar por:</string>
    <string name="orderArchivo">Nombre de archivo</string>
    <string name="orderDate">Fecha de creación</string>
    <string name="orderBookTitle">Título del libro</string>

</resources>